fix: remove deprecated env field from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,5 @@
     "framework": "nextjs",
     "buildCommand": "npx prisma generate && next build",
     "devCommand": "next dev",
-    "installCommand": "npm install",
-    "env": {
-        "DATABASE_URL": "file:./dev.db"
-    }
+    "installCommand": "npm install"
 }
